Regression: Grease Pencil : multiple Line Art modifiers cause crashes #103880

Closed
opened 2023-01-14 13:31:14 +01:00 by Jonathan Lanza · 14 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.30

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-13 23:22, hash: 3a3d9488a1
Broken: 3.4.0
Worked: 3.3.2

Caused by 0aaff9a07d

Short description of error
Create 2 cubes, add the grease pencil Line Art modifier on both of them, go in camera view, turn the camera around the object or pan the camera away from the objects to crash blender.

It seems that this crash dosent happen in 3.3.2

Exact steps for others to reproduce the error
With the attached .blend file, just pan the camera up to crash blender.
line art crash.blend

NOTE: running blender with -t 1 does not crash

NOTE: getting "blender/source/blender/windowmanager/intern/wm_event_system.cc:282:22: runtime error: member access within null pointer of type 'const struct wmNotifier'" in the console

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.30 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-13 23:22, hash: `3a3d9488a1` Broken: 3.4.0 Worked: 3.3.2 Caused by 0aaff9a07d **Short description of error** Create 2 cubes, add the grease pencil Line Art modifier on both of them, go in camera view, turn the camera around the object or pan the camera away from the objects to crash blender. It seems that this crash dosent happen in 3.3.2 **Exact steps for others to reproduce the error** With the attached .blend file, just pan the camera up to crash blender. [line art crash.blend](https://archive.blender.org/developer/F14149608/line_art_crash.blend) NOTE: running blender with -t 1 does not crash NOTE: getting "blender/source/blender/windowmanager/intern/wm_event_system.cc:282:22: runtime error: member access within null pointer of type 'const struct wmNotifier'" in the console
Author

Added subscriber: @BoJo

Added subscriber: @BoJo

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The failure is not regular, there is a fact of randomness.
It seems that if you quickly jerk the camera, causing the lines to completely disappear and appear, then the chances are high.
There is no stack even in debugging.

The failure is not regular, there is a fact of randomness. It seems that if you quickly jerk the camera, causing the lines to completely disappear and appear, then the chances are high. There is no stack even in debugging.

Added subscriber: @Travis-Szabo

Added subscriber: @Travis-Szabo

Blender Version
Broken: version: 3.5.0 Alpha

I've just tested this one.

It happens in 3.4 as well, but not in 3.3.1

> Blender Version > Broken: version: 3.5.0 Alpha I've just tested this one. It happens in 3.4 as well, but not in 3.3.1
Author

For me, once i have 2 separate objets with line art on them, it absolutely will eventually crash, sometimes i can move the camera for a few seconds, other times its crashing instantly on the smallest movement.

I found a little workaround that is interesting to take into account ; if i create multiple objetcs with some detail, then i join them all together and only THEN add the line art, the crash would not happen.

it seems the crash is only happening with multiple objects.

joined objects.png

For me, once i have 2 separate objets with line art on them, it absolutely will eventually crash, sometimes i can move the camera for a few seconds, other times its crashing instantly on the smallest movement. I found a little workaround that is interesting to take into account ; if i create multiple objetcs with some detail, then i join them all together and only THEN add the line art, the crash would not happen. it seems the crash is only happening with multiple objects. ![joined objects.png](https://archive.blender.org/developer/F14149988/joined_objects.png)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

will bisect this

will bisect this
Member

Seems to be a threading issue, blender -t 1 doesnt crash

Seems to be a threading issue, `blender -t 1` doesnt crash
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Caused by 0aaff9a07d

also getting this:

/blender/windowmanager/intern/wm_event_system.cc:282:22: runtime error: member access within null pointer of type 'const struct wmNotifier'
Writing: /tmp/line art crash.crash.txt

CC @ideasman42

Caused by 0aaff9a07d also getting this: ``` /blender/windowmanager/intern/wm_event_system.cc:282:22: runtime error: member access within null pointer of type 'const struct wmNotifier' Writing: /tmp/line art crash.crash.txt ``` CC @ideasman42
Philipp Oeser changed title from Grease Pencil : multiple Line Art modifiers cause crashes to Regression: Grease Pencil : multiple Line Art modifiers cause crashes 2023-01-17 14:52:56 +01:00
Campbell Barton self-assigned this 2023-01-18 13:03:55 +01:00

This issue was referenced by 2907227db2

This issue was referenced by 2907227db2c91a55d9b55f5d06e82f0547200bb9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Core project 2023-02-09 15:43:10 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103880
No description provided.