Fix T103880: Crash with Line Art Grease-Pencil modifier

The line art modifier added a wmNotifier in it's
GpencilModifierTypeInfo.generateStrokes callback which isn't thread-safe
when called from the depsgraph. This was from the original inclusion
of the feature [0] however a more recent optimization to notifier
lookups [1] made the crash occur more frequently.

Remove the notifier as modifiers should not be adding WM level events
and it works without it.

[0]: 3e87d8a4315d794efff659e40f0bb9e34e2aec8a
[1]: 0aaff9a07d3bdf8588cef15d502aeb4fdab22e5e