source/blender/gpencil_modifiers/intern/MOD_gpencillineart.c
@@ -44,9 +44,6 @@
 #include "MOD_gpencil_ui_common.h"
 #include "lineart/MOD_lineart.h"
 
-#include "WM_api.h"
-#include "WM_types.h"
-
 static void initData(GpencilModifierData *md)
 {
   LineartGpencilModifierData *gpmd = (LineartGpencilModifierData *)md;
@@ -168,8 +165,6 @@ static void generateStrokes(GpencilModifierData *md, Depsgraph *depsgraph, Objec
      * cache. */
     lmd->cache = gpd->runtime.lineart_cache;
   }
-
-  WM_main_add_notifier(NA_EDITED | NC_GPENCIL, NULL);
 }
 
 static void bakeModifier(Main *UNUSED(bmain),
